--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ authors = ["thisi5patrick"]
 python = "^3.9"
 requests = "^2.28.0"
 selenium = "^4.2.0"
-SQLAlchemy = "^1.4.37"
+orjson = "^3.7.2"
+Flask = "^2.1.2"
+Flask-SQLAlchemy = "^2.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
@@ -21,3 +23,8 @@ isort = "^5.10.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+py_version = 39
+profile = "black"
+line_length = 120
