--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ selenium = "^4.2.0"
 orjson = "^3.7.2"
 Flask = "^2.1.2"
 Flask-SQLAlchemy = "^2.5.1"
+global-land-mask = "^1.0.0"
+numpy = "^1.22.4"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
