--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ target-version = ['py39']
 
 [tool.poetry]
 name = "flights-monitor"
-version = "0.0.1"
+version = "0.0.2"
 description = ""
 authors = ["thisi5patrick"]
 
@@ -17,6 +17,10 @@ Flask = "^2.1.2"
 Flask-SQLAlchemy = "^2.5.1"
 global-land-mask = "^1.0.0"
 numpy = "^1.22.4"
+lxml = "^4.9.0"
+tzwhere = "^3.0.3"
+pytz = "^2022.1"
+flasgger = "^0.9.5"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
