--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ lxml = "^4.9.0"
 tzwhere = "^3.0.3"
 pytz = "^2022.1"
 flasgger = "^0.9.5"
+timezonefinder = "^6.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
