--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ tzwhere = "^3.0.3"
 pytz = "^2022.1"
 flasgger = "^0.9.5"
 timezonefinder = "^6.0.1"
+python-dateutil = "^2.8.2"
+requests-html = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
